# edev

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1a43c3e85243_create_users_type.py  798385d755bf_init_migrate.py
requirements/: dev.txt
scripts/: env_settings.sh
src/: main.py  manage.py
src/api/v1/routers/: base.py  users.py
src/core/: base.py  config.py  databases.py  depends.py  security.py  settings.py
src/core/auth/: crud.py  endpoints_auth.py  endpoints_types.py  endppoints_users.py  helpers.py  models.py  routers.py  schemas.py
src/core/db/: base.py  database.py
src/core/migrations/: env.py
src/core/migrations/versions/: 3a6602ef0c44_added_account_table.py  f94edc77b8c3_addd_users_to_role.py
src/crud/: users_crud.py
src/edev/: asgi.py  settings.py  urls.py  wsgi.py
src/models/: courses.py  users.py
src/routers/: users.py
src/schemas/: courses.py  users.py
tests/: test_edev.py
