[tool.poetry]
name = "edev"
version = "0.1.0"
description = ""
authors = ["OlegBugaichuk <olegussek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.2"
fastapi = "^0.71.0"
SQLAlchemy = "^1.4.29"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
psycopg2-binary = "^2.9.2"
uvicorn = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
